force-app/main/default/objects/QuoteSettings__mdt/QuoteSettings__mdt.object-meta.xml
<CustomObject>
    <description>Admin-configurable quote defaults: validity, payment terms, bulk discount, and general T&amp;Cs. Edit records in Setup → Custom Metadata → Quote Settings — no deployment required.</description>
    <label>Quote Settings</label>
    <pluralLabel>Quote Settings</pluralLabel>
</CustomObject>