force-app/main/default/objects/QuoteSettings__mdt/fields/DefaultBulkDiscount__c.field-meta.xml
<CustomField>
    <fullName>DefaultBulkDiscount__c</fullName>
    <description>Default bulk discount percentage applied to all B2B quotes (e.g. 10 for 10%).</description>
    <label>Default Bulk Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>