force-app/main/default/objects/QuoteSettings__mdt/fields/DefaultPaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>DefaultPaymentTerms__c</fullName>
    <description>Default payment terms applied to all new quotes (e.g. Net 30, Net 45, Net 60).</description>
    <label>Default Payment Terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>