force-app/main/default/objects/QuoteSettings__mdt/fields/DefaultValidityDays__c.field-meta.xml
<CustomField>
    <fullName>DefaultValidityDays__c</fullName>
    <description>Number of days a quote remains valid after creation (e.g. 30).</description>
    <label>Default Validity (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>