force-app/main/default/objects/QuoteSettings__mdt/fields/GeneralTermsAndConditions__c.field-meta.xml
<CustomField>
    <fullName>GeneralTermsAndConditions__c</fullName>
    <description>General Terms and Conditions text displayed on every quote in the customer portal. Edit here — no deployment required.</description>
    <label>General Terms and Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>