force-app/main/default/objects/QuoteSettings__mdt/fields/SignatureDeadlineDays__c.field-meta.xml
<CustomField>
    <fullName>SignatureDeadlineDays__c</fullName>
    <description>Number of days the customer has to sign the contract after it is sent (e.g. 14).</description>
    <label>Signature Deadline (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>